el ejercicio ya resuelto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
     </a> -
     <a [routerLink]="['/formulario']" [routerLinkActive]="['activado']">
         Formulario
+    </a> -
+    <a [routerLink]="['/coche']" [routerLinkActive]="['activado']">
+        Coche
     </a>
 </nav>
 <hr>
